syntax = "proto3";
import "google/protobuf/any.proto";
package LPS.Server.Rpc.InnerMessages;

enum ServiceControlMessage {
    Ready = 0;
    ServiceReady = 1;
    Restarted = 2;
    ShutDown = 3;
}

enum ServiceRemoteType {
    Service = 0;
}

message ServiceControl {
  ServiceRemoteType From = 1;
  ServiceControlMessage Message = 2;
  repeated google.protobuf.Any Args = 3;
}
